fixed overflow on skills in home section

--- a/styles.css
+++ b/styles.css
@@ -433,7 +433,7 @@ button {
 	#bio-text-home {
 		font-size: 26px;
 		line-height: 2em;
-		grid-area: 1 / 4 / span 2 / span 1;
+		grid-area: 1 / 3 / span 2 / span 2;
 		align-self: center;
 		align-items: flex-start;
 		justify-content: center;
@@ -465,7 +465,9 @@ button {
 		width: 100%;
 		display: flex;
 		flex-direction: row;
-		justify-content: space-between;
+		flex-wrap: wrap;
+		justify-content: flex-start;
+		gap: 2rem;
 	}
 }
 
